path a lotacion.html en dist agregada

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
           <p class="p_header">The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
 
-          <a href="location.html" class="button_1">OUR LOCATION<img src="img/icons/button_arrow_right.svg" alt="arrow right"></a>
+          <a href="./location.html" class="button_1">OUR LOCATION<img src="img/icons/button_arrow_right.svg" alt="arrow right"></a>
 
         </div>
 
