fichero public creado con imagenes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- responsive 375/768/1200 -->
     <header class="hero">
       <figure>
-        <img class="hero_img_small" src="./img/png/hero_img_s.jpg" alt="hero_image_s">
+        <img class="hero_img_small" src="hero_img_s.jpg" alt="hero_image_s">
 
-        <img class="hero_img_medium" src="./img/png/hero_img_l.jpg" alt="hero_image_l">
+        <img class="hero_img_medium" src="hero_img_l.jpg" alt="hero_image_l">
 
       </figure>
 
